# rlc2ss

./: .clang-format  .gitignore  Directory.Build.Props.in  LICENSE  README.md  conanfile.txt  generate.bat  justfile  meson.build  pyproject.toml
qucs/: 2L.cir  2l.sch  3L_matrices.h  3l.cir  3l.sch  diode.cir  diode.sch  diode_bridge_3l.cir  diode_bridge_3l.sch  diode_bridge_3l_matrices.cpp  diode_bridge_3l_matrices.hpp  diode_bridge_3l_matrices.json  diode_bridge_3l_matrices.rc  diode_matrices.cpp  diode_matrices.hpp  mutual_inductor.cir  mutual_inductor.sch  mutual_inductor_matrices.cpp  mutual_inductor_matrices.hpp  saturating_inductor.cir  saturating_inductor.sch  saturating_inductor_matrices.cpp  saturating_inductor_matrices.hpp  sort.py
schematics/: 2L.cir  2R.cir  LCL.cir  LCL_S.cir  LCL_with_faults.cir  LCL_with_faults_S.cir  RL.cir  RL3.cir  RL3_matrices.cpp  RL3_matrices.hpp  RL3_matrices.json  RL3_matrices.rc  RLC.cir  RL_M.cir  current_source.cir  diode_bridge.cir  diode_bridge_matrices.cpp  diode_bridge_matrices.hpp  diode_bridge_matrices.json  diode_bridge_matrices.rc  transformer.cir  transformer_ii.cir  transformer_iv.cir  transformer_vi.cir
scripts/: plot.py  rlc2ss.py  state_matrices_to_cpp.py  state_matrices_to_json.py
simulink/: init.m  init_diode_3l.m  test_diode.slx  test_diode_lcl.slx  test_lcl.slx  test_lcl_with_faults.slx
src/: circuit_tester.cpp  diode_bridge.cpp  diode_bridge_3L.cpp  integrator.h  integrator.hpp  inverter.cpp  inverter_2L.cpp  inverter_3L.cpp  lcl.cpp  lcl_with_faults.cpp  mutual_inductance.cpp  rlc2ss.cpp  rlc2ss.h  transformer.cpp  vector_classes.h
tests/: expressionEvalTest.cpp  expression_eval_test.cpp
